--- a/app/templates/solarBeam/reg_oferta_compra.html
+++ b/app/templates/solarBeam/reg_oferta_compra.html
@@ -30,7 +30,7 @@
                             <label for="tipoOferta">Selecciona el tipo de oferta</label>
                             <select name="tipoOferta" id="tipoOferta" class="form-control">
                                 <option value="ofertaInd">Oferta individual</option>
-                                <option value="ofertaAgr" disabled>Oferta agrupada</option>
+                                <option value="ofertaAgr">Oferta agrupada</option>
                             </select>
                         </div>
                         <div class="form-row mt-2">
